--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decodificador</title>
+    <title>Encriptador - Draco</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <script src="app.js"></script>
+    
+    <header>
+        <h1><img src="images/logo.png" alt="Logo de Alura" ></h1>
+    </header>
+    
+    <main>
+        <div>
+            <input type="text" id="encriptarInput" class="caja-input" placeholder="Ingrese el texto aquí">
+        </div>
+
+
+    </main>
+
+
+<!--  Pal rato: <script src="app.js"></script>  -->    
 </body>
 </html>
