Actualizar botones y advertencia

--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     </header>
     
     <main>
+
+        
         <div>
             <input type="text" id="encriptarInput" class="caja-input" placeholder="Ingrese el texto aquí">
+        </div>
+
+        <div>
+            <p class="advertencia">⚠ Solo letras minúsculas y sin acentos</p>
+            <button id="encriptar" class="boton-encriptar">Encriptar</button>
+            <button id="desencriptar" class="boton-desencriptar">Desencriptar</button>
         </div>
 
 
